add lang to home profile screens

--- a/utils/locales/ar/translation.json
+++ b/utils/locales/ar/translation.json
@@ -71,5 +71,185 @@
       "group_name_required": "اسم المجموعة مطلوب",
       "members_required": "يرجى إضافة عضو واحد على الأقل"
     }
+  },
+  "customAlert": {
+    "buttons": {
+      "ok": "موافق",
+      "cancel": "إلغاء",
+      "confirm": "تأكيد",
+      "close": "إغلاق",
+      "continue": "متابعة",
+      "retry": "إعادة المحاولة",
+      "dismiss": "تجاهل"
+    },
+    "titles": {
+      "success": "نجح",
+      "error": "خطأ",
+      "warning": "تحذير",
+      "info": "معلومات",
+      "confirmation": "تأكيد"
+    },
+    "messages": {
+      "default_success": "تمت العملية بنجاح",
+      "default_error": "حدث خطأ. يرجى المحاولة مرة أخرى.",
+      "default_warning": "يرجى مراجعة إجراءك",
+      "default_info": "إليك بعض المعلومات",
+      "network_error": "فشل في الاتصال بالشبكة. يرجى التحقق من اتصالك بالإنترنت.",
+      "validation_error": "يرجى التحقق من إدخالك والمحاولة مرة أخرى",
+      "timeout_error": "انتهت مهلة الطلب. يرجى المحاولة لاحقاً.",
+      "permission_denied": "تم رفض الإذن. يرجى التحقق من حقوق الوصول الخاصة بك.",
+      "save_success": "تم حفظ التغييرات بنجاح",
+      "delete_success": "تم حذف العنصر بنجاح",
+      "update_success": "تم التحديث بنجاح",
+      "logout_success": "تم تسجيل الخروج بنجاح",
+      "login_success": "مرحباً بعودتك! تم تسجيل الدخول بنجاح",
+      "registration_success": "تم إنشاء الحساب بنجاح"
+    }
+  },
+  "common": {
+    "currency": "درهم",
+    "seeAll": "عرض الكل",
+    "cancel": "إلغاء",
+    "close": "إغلاق",
+    "save": "حفظ",
+    "delete": "حذف",
+    "edit": "تعديل",
+    "add": "إضافة",
+    "search": "بحث",
+    "loading": "جاري التحميل...",
+    "error": "خطأ",
+    "success": "نجح",
+    "noData": "لا توجد بيانات متاحة",
+    "retry": "إعادة المحاولة"
+  },
+  "home": {
+    "goodMorning": "صباح الخير 👋",
+    "oweYou": "يدين لك",
+    "youOwe": "أنت مدين",
+    "monthlyOverview": "نظرة عامة على {{month}} {{year}}",
+    "recentActivity": "النشاط الأخير",
+    "noExpensesThisMonth": "لا توجد مصاريف لهذا الشهر",
+    "noRecentActivity": "لا يوجد نشاط حديث",
+    "totalExpenses": "إجمالي المصاريف",
+    "totalTransactions": "إجمالي المعاملات",
+    "switchGroup": "تبديل المجموعة",
+    "noGroupSet": "لم يتم تعيين مجموعة بعد",
+    "noGroupMembers": "لا يوجد أعضاء في المجموعة",
+    "moreCategoriesCount": "+{{count}} فئات أخرى"
+  },
+  "expense": {
+    "paidBy": "دفع من قبل {{name}}",
+    "amount": "{{amount}} {{currency}}",
+    "expenseDetails": "تفاصيل المصروف",
+    "addExpense": "إضافة مصروف",
+    "editExpense": "تعديل المصروف",
+    "deleteExpense": "حذف المصروف",
+    "expenseTitle": "عنوان المصروف",
+    "expenseAmount": "المبلغ",
+    "selectCategory": "اختر الفئة",
+    "selectDate": "اختر التاريخ",
+    "addNote": "إضافة ملاحظة",
+    "splitBetween": "تقسيم بين"
+  },
+  "group": {
+    "selectGroup": "اختر المجموعة",
+    "switchGroup": "تبديل المجموعة",
+    "createNewGroup": "إنشاء مجموعة جديدة",
+    "addNewGroup": "إضافة مجموعة جديدة",
+    "groupName": "اسم المجموعة",
+    "groupMembers": "أعضاء المجموعة",
+    "addMembers": "إضافة أعضاء",
+    "removeMember": "إزالة العضو",
+    "leaveGroup": "مغادرة المجموعة",
+    "deleteGroup": "حذف المجموعة",
+    "noGroupsAvailable": "لا توجد مجموعات متاحة",
+    "memberCount": "{{count}} أعضاء",
+    "groupSettings": "إعدادات المجموعة",
+    "inviteMembers": "دعوة أعضاء"
+  },
+  "notifications": {
+    "notifications": "الإشعارات",
+    "noNotifications": "لا توجد إشعارات",
+    "markAllAsRead": "تحديد الكل كمقروء",
+    "newExpense": "تم إضافة مصروف جديد",
+    "expenseUpdated": "تم تحديث المصروف",
+    "expenseDeleted": "تم حذف المصروف",
+    "memberAdded": "تم إضافة عضو جديد للمجموعة",
+    "memberLeft": "غادر العضو المجموعة",
+    "paymentReceived": "تم استلام الدفع",
+    "paymentRequest": "طلب دفع"
+  },
+  "categories": {
+    "food": "طعام",
+    "transport": "نقل",
+    "entertainment": "ترفيه",
+    "shopping": "تسوق",
+    "bills": "فواتير",
+    "health": "صحة",
+    "education": "تعليم",
+    "travel": "سفر",
+    "other": "أخرى",
+    "groceries": "بقالة",
+    "restaurant": "مطعم",
+    "gas": "وقود",
+    "taxi": "تاكسي",
+    "movies": "أفلام",
+    "clothing": "ملابس",
+    "electricity": "كهرباء",
+    "internet": "إنترنت",
+    "medicine": "دواء",
+    "books": "كتب",
+    "hotel": "فندق"
+  },
+  "validation": {
+    "required": "هذا الحقل مطلوب",
+    "invalidEmail": "عنوان بريد إلكتروني غير صالح",
+    "invalidAmount": "مبلغ غير صالح",
+    "amountTooSmall": "يجب أن يكون المبلغ أكبر من 0",
+    "titleTooShort": "يجب أن يكون العنوان 3 أحرف على الأقل",
+    "titleTooLong": "يجب أن يكون العنوان أقل من 50 حرف",
+    "invalidDate": "تاريخ غير صالح",
+    "selectCategory": "يرجى اختيار فئة",
+    "selectMembers": "يرجى اختيار عضو واحد على الأقل"
+  },
+  "errors": {
+    "networkError": "خطأ في اتصال الشبكة",
+    "serverError": "حدث خطأ في الخادم",
+    "unauthorizedAccess": "وصول غير مصرح به",
+    "dataNotFound": "البيانات غير موجودة",
+    "validationFailed": "فشل التحقق",
+    "operationFailed": "فشلت العملية",
+    "unknownError": "حدث خطأ غير معروف"
+  },
+  "profile": {
+    "title": "الملف الشخصي",
+    "profile": "الملف الشخصي",
+    "settings": "الإعدادات",
+    "language": "اللغة",
+    "darkMode": "الوضع المظلم",
+    "logout": "تسجيل الخروج",
+    "profileDetails": "تفاصيل الملف الشخصي",
+    "editProfile": "تعديل الملف الشخصي",
+    "personalInfo": "المعلومات الشخصية",
+    "accountSettings": "إعدادات الحساب",
+    "preferences": "التفضيلات",
+    "security": "الأمان",
+    "privacy": "الخصوصية",
+    "notifications": "الإشعارات",
+    "about": "حول",
+    "help": "المساعدة والدعم",
+    "termsAndConditions": "الشروط والأحكام",
+    "privacyPolicy": "سياسة الخصوصية",
+    "version": "الإصدار",
+    "buildNumber": "رقم البناء"
+  },
+
+  "logout": {
+    "title": "تسجيل الخروج",
+    "message": "هل أنت متأكد من أنك تريد تسجيل الخروج؟",
+    "confirm": "تسجيل الخروج",
+    "cancel": "إلغاء",
+    "success": "تم تسجيل خروجك بنجاح",
+    "error": "فشل في تسجيل الخروج. يرجى المحاولة مرة أخرى"
   }
 }
