--- a/utils/locales/fr/translation.json
+++ b/utils/locales/fr/translation.json
@@ -71,5 +71,184 @@
       "group_name_required": "Le nom du groupe est obligatoire",
       "members_required": "Veuillez ajouter au moins un membre"
     }
+  },
+  "customAlert": {
+    "buttons": {
+      "ok": "OK",
+      "cancel": "Annuler",
+      "confirm": "Confirmer",
+      "close": "Fermer",
+      "continue": "Continuer",
+      "retry": "Réessayer",
+      "dismiss": "Ignorer"
+    },
+    "titles": {
+      "success": "Succès",
+      "error": "Erreur",
+      "warning": "Attention",
+      "info": "Information",
+      "confirmation": "Confirmation"
+    },
+    "messages": {
+      "default_success": "Opération terminée avec succès",
+      "default_error": "Une erreur s'est produite. Veuillez réessayer.",
+      "default_warning": "Veuillez vérifier votre action",
+      "default_info": "Voici quelques informations pour vous",
+      "network_error": "Échec de la connexion réseau. Veuillez vérifier votre connexion internet.",
+      "validation_error": "Veuillez vérifier votre saisie et réessayer",
+      "timeout_error": "Délai d'attente dépassé. Veuillez réessayer plus tard.",
+      "permission_denied": "Permission refusée. Veuillez vérifier vos droits d'accès.",
+      "save_success": "Modifications enregistrées avec succès",
+      "delete_success": "Élément supprimé avec succès",
+      "update_success": "Mise à jour terminée avec succès",
+      "logout_success": "Vous avez été déconnecté avec succès",
+      "login_success": "Bon retour ! Connexion réussie",
+      "registration_success": "Compte créé avec succès"
+    }
+  },
+  "common": {
+    "currency": "MAD",
+    "seeAll": "Voir Tout",
+    "cancel": "Annuler",
+    "close": "Fermer",
+    "save": "Enregistrer",
+    "delete": "Supprimer",
+    "edit": "Modifier",
+    "add": "Ajouter",
+    "search": "Rechercher",
+    "loading": "Chargement...",
+    "error": "Erreur",
+    "success": "Succès",
+    "noData": "Aucune donnée disponible",
+    "retry": "Réessayer"
+  },
+  "home": {
+    "goodMorning": "Bonjour 👋",
+    "oweYou": "Vous Doit",
+    "youOwe": "Vous Devez",
+    "monthlyOverview": "Aperçu de {{month}} {{year}}",
+    "recentActivity": "Activité Récente",
+    "noExpensesThisMonth": "Aucune dépense ce mois-ci",
+    "noRecentActivity": "Aucune activité récente",
+    "totalExpenses": "Total des Dépenses",
+    "totalTransactions": "Total des Transactions",
+    "switchGroup": "Changer de Groupe",
+    "noGroupSet": "Aucun groupe défini encore",
+    "noGroupMembers": "Aucun membre du groupe",
+    "moreCategoriesCount": "+{{count}} catégories de plus"
+  },
+  "expense": {
+    "paidBy": "Payé par {{name}}",
+    "amount": "{{amount}} {{currency}}",
+    "expenseDetails": "Détails de la Dépense",
+    "addExpense": "Ajouter une Dépense",
+    "editExpense": "Modifier la Dépense",
+    "deleteExpense": "Supprimer la Dépense",
+    "expenseTitle": "Titre de la Dépense",
+    "expenseAmount": "Montant",
+    "selectCategory": "Sélectionner la Catégorie",
+    "selectDate": "Sélectionner la Date",
+    "addNote": "Ajouter une Note",
+    "splitBetween": "Diviser Entre"
+  },
+  "group": {
+    "selectGroup": "Sélectionner le Groupe",
+    "switchGroup": "Changer de Groupe",
+    "createNewGroup": "Créer un Nouveau Groupe",
+    "addNewGroup": "Ajouter un Nouveau Groupe",
+    "groupName": "Nom du Groupe",
+    "groupMembers": "Membres du Groupe",
+    "addMembers": "Ajouter des Membres",
+    "removeMember": "Supprimer le Membre",
+    "leaveGroup": "Quitter le Groupe",
+    "deleteGroup": "Supprimer le Groupe",
+    "noGroupsAvailable": "Aucun groupe disponible",
+    "memberCount": "{{count}} membres",
+    "groupSettings": "Paramètres du Groupe",
+    "inviteMembers": "Inviter des Membres"
+  },
+  "notifications": {
+    "notifications": "Notifications",
+    "noNotifications": "Aucune notification",
+    "markAllAsRead": "Marquer tout comme lu",
+    "newExpense": "Nouvelle dépense ajoutée",
+    "expenseUpdated": "Dépense mise à jour",
+    "expenseDeleted": "Dépense supprimée",
+    "memberAdded": "Nouveau membre ajouté au groupe",
+    "memberLeft": "Le membre a quitté le groupe",
+    "paymentReceived": "Paiement reçu",
+    "paymentRequest": "Demande de paiement"
+  },
+  "categories": {
+    "food": "Nourriture",
+    "transport": "Transport",
+    "entertainment": "Divertissement",
+    "shopping": "Shopping",
+    "bills": "Factures",
+    "health": "Santé",
+    "education": "Éducation",
+    "travel": "Voyage",
+    "other": "Autre",
+    "groceries": "Épicerie",
+    "restaurant": "Restaurant",
+    "gas": "Essence",
+    "taxi": "Taxi",
+    "movies": "Films",
+    "clothing": "Vêtements",
+    "electricity": "Électricité",
+    "internet": "Internet",
+    "medicine": "Médicament",
+    "books": "Livres",
+    "hotel": "Hôtel"
+  },
+  "validation": {
+    "required": "Ce champ est requis",
+    "invalidEmail": "Adresse e-mail invalide",
+    "invalidAmount": "Montant invalide",
+    "amountTooSmall": "Le montant doit être supérieur à 0",
+    "titleTooShort": "Le titre doit contenir au moins 3 caractères",
+    "titleTooLong": "Le titre doit contenir moins de 50 caractères",
+    "invalidDate": "Date invalide",
+    "selectCategory": "Veuillez sélectionner une catégorie",
+    "selectMembers": "Veuillez sélectionner au moins un membre"
+  },
+  "errors": {
+    "networkError": "Erreur de connexion réseau",
+    "serverError": "Erreur du serveur",
+    "unauthorizedAccess": "Accès non autorisé",
+    "dataNotFound": "Données non trouvées",
+    "validationFailed": "Échec de la validation",
+    "operationFailed": "Échec de l'opération",
+    "unknownError": "Une erreur inconnue s'est produite"
+  },
+  "profile": {
+    "title": "Profil",
+    "profile": "Profil",
+    "settings": "Paramètres",
+    "language": "Langue",
+    "darkMode": "Mode Sombre",
+    "logout": "Déconnexion",
+    "profileDetails": "Détails du Profil",
+    "editProfile": "Modifier le Profil",
+    "personalInfo": "Informations Personnelles",
+    "accountSettings": "Paramètres du Compte",
+    "preferences": "Préférences",
+    "security": "Sécurité",
+    "privacy": "Confidentialité",
+    "notifications": "Notifications",
+    "about": "À Propos",
+    "help": "Aide et Support",
+    "termsAndConditions": "Conditions Générales",
+    "privacyPolicy": "Politique de Confidentialité",
+    "version": "Version",
+    "buildNumber": "Numéro de Build"
+  },
+  "logout": {
+    "title": "Déconnexion",
+    "message": "Êtes-vous sûr de vouloir vous déconnecter ?",
+    "confirm": "Déconnexion",
+    "cancel": "Annuler",
+    "success": "Vous avez été déconnecté avec succès",
+    "error": "Échec de la déconnexion. Veuillez réessayer"
   }
 }
