--- a/utils/locales/en/translation.json
+++ b/utils/locales/en/translation.json
@@ -71,5 +71,186 @@
       "group_name_required": "Group name is required",
       "members_required": "Please add at least one member"
     }
+  },
+  "customAlert": {
+    "buttons": {
+      "ok": "OK",
+      "cancel": "Cancel",
+      "confirm": "Confirm",
+      "close": "Close",
+      "continue": "Continue",
+      "retry": "Retry",
+      "dismiss": "Dismiss"
+    },
+    "titles": {
+      "success": "Success",
+      "error": "Error",
+      "warning": "Warning",
+      "info": "Information",
+      "confirmation": "Confirmation"
+    },
+    "messages": {
+      "default_success": "Operation completed successfully",
+      "default_error": "An error occurred. Please try again.",
+      "default_warning": "Please review your action",
+      "default_info": "Here's some information for you",
+      "network_error": "Network connection failed. Please check your internet connection.",
+      "validation_error": "Please check your input and try again",
+      "timeout_error": "Request timed out. Please try again later.",
+      "permission_denied": "Permission denied. Please check your access rights.",
+      "save_success": "Changes saved successfully",
+      "delete_success": "Item deleted successfully",
+      "update_success": "Update completed successfully",
+      "logout_success": "You have been logged out successfully",
+      "login_success": "Welcome back! Login successful",
+      "registration_success": "Account created successfully"
+    }
+  },
+
+  "common": {
+    "currency": "MAD",
+    "seeAll": "See All",
+    "cancel": "Cancel",
+    "close": "Close",
+    "save": "Save",
+    "delete": "Delete",
+    "edit": "Edit",
+    "add": "Add",
+    "search": "Search",
+    "loading": "Loading...",
+    "error": "Error",
+    "success": "Success",
+    "noData": "No data available",
+    "retry": "Retry"
+  },
+  "home": {
+    "goodMorning": "Good morning 👋",
+    "oweYou": "Owe You",
+    "youOwe": "You Owe",
+    "monthlyOverview": "{{month}} {{year}} Overview",
+    "recentActivity": "Recently Activity",
+    "noExpensesThisMonth": "No expenses for this month",
+    "noRecentActivity": "No recent activity",
+    "totalExpenses": "Total Expenses",
+    "totalTransactions": "Total Transactions",
+    "switchGroup": "Switch Group",
+    "noGroupSet": "No group set yet",
+    "noGroupMembers": "No group members",
+    "moreCategoriesCount": "+{{count}} more categories"
+  },
+  "expense": {
+    "paidBy": "Paid by {{name}}",
+    "amount": "{{amount}} {{currency}}",
+    "expenseDetails": "Expense Details",
+    "addExpense": "Add Expense",
+    "editExpense": "Edit Expense",
+    "deleteExpense": "Delete Expense",
+    "expenseTitle": "Expense Title",
+    "expenseAmount": "Amount",
+    "selectCategory": "Select Category",
+    "selectDate": "Select Date",
+    "addNote": "Add Note",
+    "splitBetween": "Split Between"
+  },
+  "group": {
+    "selectGroup": "Select Group",
+    "switchGroup": "Switch Group",
+    "createNewGroup": "Create New Group",
+    "addNewGroup": "Add New Group",
+    "groupName": "Group Name",
+    "groupMembers": "Group Members",
+    "addMembers": "Add Members",
+    "removeMember": "Remove Member",
+    "leaveGroup": "Leave Group",
+    "deleteGroup": "Delete Group",
+    "noGroupsAvailable": "No groups available",
+    "memberCount": "{{count}} members",
+    "groupSettings": "Group Settings",
+    "inviteMembers": "Invite Members"
+  },
+  "notifications": {
+    "notifications": "Notifications",
+    "noNotifications": "No notifications",
+    "markAllAsRead": "Mark all as read",
+    "newExpense": "New expense added",
+    "expenseUpdated": "Expense updated",
+    "expenseDeleted": "Expense deleted",
+    "memberAdded": "New member added to group",
+    "memberLeft": "Member left the group",
+    "paymentReceived": "Payment received",
+    "paymentRequest": "Payment request"
+  },
+  "categories": {
+    "food": "Food",
+    "transport": "Transport",
+    "entertainment": "Entertainment",
+    "shopping": "Shopping",
+    "bills": "Bills",
+    "health": "Health",
+    "education": "Education",
+    "travel": "Travel",
+    "other": "Other",
+    "groceries": "Groceries",
+    "restaurant": "Restaurant",
+    "gas": "Gas",
+    "taxi": "Taxi",
+    "movies": "Movies",
+    "clothing": "Clothing",
+    "electricity": "Electricity",
+    "internet": "Internet",
+    "medicine": "Medicine",
+    "books": "Books",
+    "hotel": "Hotel"
+  },
+  "validation": {
+    "required": "This field is required",
+    "invalidEmail": "Invalid email address",
+    "invalidAmount": "Invalid amount",
+    "amountTooSmall": "Amount must be greater than 0",
+    "titleTooShort": "Title must be at least 3 characters",
+    "titleTooLong": "Title must be less than 50 characters",
+    "invalidDate": "Invalid date",
+    "selectCategory": "Please select a category",
+    "selectMembers": "Please select at least one member"
+  },
+  "errors": {
+    "networkError": "Network connection error",
+    "serverError": "Server error occurred",
+    "unauthorizedAccess": "Unauthorized access",
+    "dataNotFound": "Data not found",
+    "validationFailed": "Validation failed",
+    "operationFailed": "Operation failed",
+    "unknownError": "An unknown error occurred"
+  },
+  "profile": {
+    "title": "Profile",
+    "profile": "Profile",
+    "settings": "Settings",
+    "language": "Language",
+    "darkMode": "Dark Mode",
+    "logout": "Logout",
+    "profileDetails": "Profile Details",
+    "editProfile": "Edit Profile",
+    "personalInfo": "Personal Information",
+    "accountSettings": "Account Settings",
+    "preferences": "Preferences",
+    "security": "Security",
+    "privacy": "Privacy",
+    "notifications": "Notifications",
+    "about": "About",
+    "help": "Help & Support",
+    "termsAndConditions": "Terms & Conditions",
+    "privacyPolicy": "Privacy Policy",
+    "version": "Version",
+    "buildNumber": "Build Number"
+  },
+
+  "logout": {
+    "title": "Logout",
+    "message": "Are you sure you want to logout?",
+    "confirm": "Logout",
+    "cancel": "Cancel",
+    "success": "You have been logged out successfully",
+    "error": "Failed to log out. Please try again"
   }
 }
