add language to tab navigation

--- a/utils/locales/ar/translation.json
+++ b/utils/locales/ar/translation.json
@@ -251,5 +251,14 @@
     "cancel": "إلغاء",
     "success": "تم تسجيل خروجك بنجاح",
     "error": "فشل في تسجيل الخروج. يرجى المحاولة مرة أخرى"
+  },
+  "navigation": {
+    "home": "الرئيسية",
+    "newExpense": "مصروف جديد",
+    "groups": "المجموعات",
+    "profile": "الملف الشخصي",
+    "back": "رجوع",
+    "next": "التالي",
+    "done": "تم"
   }
 }
