--- a/utils/locales/fr/translation.json
+++ b/utils/locales/fr/translation.json
@@ -187,6 +187,62 @@
     "noExpensesYet": "Pas encore de dépenses",
     "personal": "Personnel"
   },
+  "editGroup": {
+    "title": "Modifier le Groupe",
+    "group_name": "Nom du Groupe",
+    "group_name_placeholder": "Entrez le nom du groupe",
+    "add_members": "Ajouter des Membres",
+    "search_placeholder": "Rechercher par nom d'utilisateur",
+    "searching": "Recherche en cours...",
+    "search_results": "Résultats de Recherche",
+    "current_members": "Membres Actuels ({{count}})",
+    "no_users_found": "Aucun utilisateur trouvé",
+    "allow_invite_others": "Permettre aux membres d'inviter d'autres",
+    "notify_new_expenses": "Notifier pour les nouvelles dépenses",
+    "updating": "Mise à jour en cours...",
+    "update_group": "Mettre à Jour le Groupe",
+    "you": "Vous",
+    "cannot_remove_self": "Vous ne pouvez pas vous retirer du groupe",
+    "errors": {
+      "group_name_required": "Le nom du groupe est requis",
+      "members_required": "Au moins un membre est requis"
+    },
+    "search_error_title": "Erreur de Recherche",
+    "search_error_message": "Échec de la recherche d'utilisateurs. Veuillez réessayer.",
+    "success_title": "Succès",
+    "success_message": "Groupe mis à jour avec succès!",
+    "error_title": "Erreur",
+    "error_message": "Échec de la mise à jour du groupe. Veuillez réessayer.",
+    "fetch_error_message": "Échec du chargement des données du groupe. Veuillez réessayer."
+  },
+  "editGroup": {
+    "title": "Modifier le Groupe",
+    "group_name": "Nom du Groupe",
+    "group_name_placeholder": "Entrez le nom du groupe",
+    "add_members": "Ajouter des Membres",
+    "search_placeholder": "Rechercher par nom d'utilisateur",
+    "searching": "Recherche en cours...",
+    "search_results": "Résultats de Recherche",
+    "current_members": "Membres Actuels ({{count}})",
+    "no_users_found": "Aucun utilisateur trouvé",
+    "allow_invite_others": "Permettre aux membres d'inviter d'autres",
+    "notify_new_expenses": "Notifier pour les nouvelles dépenses",
+    "updating": "Mise à jour en cours...",
+    "update_group": "Mettre à Jour le Groupe",
+    "you": "Vous",
+    "cannot_remove_self": "Vous ne pouvez pas vous retirer du groupe",
+    "errors": {
+      "group_name_required": "Le nom du groupe est requis",
+      "members_required": "Au moins un membre est requis"
+    },
+    "search_error_title": "Erreur de Recherche",
+    "search_error_message": "Échec de la recherche d'utilisateurs. Veuillez réessayer.",
+    "success_title": "Succès",
+    "success_message": "Groupe mis à jour avec succès!",
+    "error_title": "Erreur",
+    "error_message": "Échec de la mise à jour du groupe. Veuillez réessayer.",
+    "fetch_error_message": "Échec du chargement des données du groupe. Veuillez réessayer."
+  },
   "groupDetails": {
     "totalGroupExpenses": "Dépenses Totales du Groupe",
     "youPaid": "Vous Avez Payé",
